--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "bootstrap": "^4.6",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
+        "sweetalert2": "^11.7.3",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
